k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tetris
  labels:
    app: tetris-devsecops
    env: production
