k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris-svc
  namespace: tetris
  labels:
    app: tetris
spec:
  selector:
    app: tetris
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
